# monitor

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  companies.example.yaml  dashboard.py  pyproject.toml  tracker.py
benchmarks/: job_slm_ambiguity_gold_20260307.json  job_slm_ambiguity_labels_20260307.json  job_slm_gold_20260306.json  job_slm_gold_20260307.json  job_slm_gold_labels_20260306.json  job_slm_gold_labels_20260307.json  job_slm_live_disagreement_review_20260306.json  policy_routing_case_defs_20260307.json  policy_routing_gold_20260307.json
career_monitor/: __init__.py  adapters.py  cli.py  config.py  constants.py  dashboard.py  exceptions.py  greenhouse_assistant.py  greenhouse_assistant_queue.py  greenhouse_learning_summary.py  greenhouse_manual_observer.py  greenhouse_observer_api.py  greenhouse_page_observer.py  greenhouse_playwright.py  greenhouse_submission_state.py  greenhouse_survey.py  greenhouse_trace_store.py  http_client.py  jobs_db_sync.py  local_paths.py  models.py  notifier.py  orchestrator.py  policy.py  profile_knowledge.py  reporting.py  state.py  tracking.py  utils.py
docs/: greenhouse-application-assistant-plan.md  greenhouse-candidate-intake.md  greenhouse-candidate-policy-template.md  greenhouse-extension-mvp.md  greenhouse-form-survey-summary.md
go/: go.mod  go.sum
profile/: experience.md  finddesk.md  gcp-infra.md  master-experience.md  word2latex.md
prompts/: qwen25_job_scoring_v2.txt  qwen25_job_scoring_v3.txt
scripts/: __init__.py  benchmark_job_slm.py  benchmark_policy_slm.py  build_job_slm_cases_from_db.py  (+19 more)
(+135 files in other folders)
